--- a/web/src/component/Navbar/NavbarStyles.css
+++ b/web/src/component/Navbar/NavbarStyles.css
@@ -66,7 +66,7 @@ button:hover {
 
 @media screen and (max-width: 850px) {
     .NavbarItems {
-        z-index: 2;
+        z-index: 99;
     }
 
     .menu-icons {
@@ -88,13 +88,15 @@ button:hover {
         align-items: stretch;
         padding: 80px 0 30px 0;
         margin: 0;
+        z-index: 199;
     }
 
     .nav-menu.active {
-        top: 0;
+        top: 8%;
         opacity: 1;
         z-index: -1;
         transition: 0.5s ease-in-out;
+        z-index: 99;
     }
 
     .nav-links {
@@ -102,11 +104,13 @@ button:hover {
         width: 100%;
         font-size: 1.2rem;
         padding: 2rem 0;
+        z-index: 99;
     }
 
     .nav-links:hover {
         background-color: #e6883b;
         transition: none;
+        z-index: 99;
     }
 
     button {
