--- a/web/src/component/ContactForm/ContactFormStyles.css
+++ b/web/src/component/ContactForm/ContactFormStyles.css
@@ -7,7 +7,7 @@
     padding-top: 3rem;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    max-width: 60%;
     margin: auto;
 }
 
