--- a/web/src/component/LogIn/LoginFormStyles.css
+++ b/web/src/component/LogIn/LoginFormStyles.css
@@ -1,4 +1,4 @@
-.flex-signup {
+.flex-login {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -10,16 +10,15 @@
     overflow: hidden;
 }
 
-
 .form-container {
     margin: 4rem 6rem;
     color: #2a2a2a;
     height: 70vh;
-    min-width: 30vw;
 }
 
 .form-container h1 {
     text-align: center;
+    min-width: 30vw;
 }
 
 
@@ -27,7 +26,7 @@
     padding-top: 3rem;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
     margin: auto;
 }
 
@@ -55,7 +54,6 @@
     display: inline;
     margin-bottom: 1vh;
     text-decoration: none;
-    width: 50%;
 }
 
 @media screen and (max-width: 850px) {
@@ -63,8 +61,8 @@
         margin: 4rem 2rem;
     }
 
-    .flex-signup {
-        flex-direction: column;
+    .flex-login {
+        flex-direction: column-reverse;
     }
 
     .form-container form {
