feat(frontend): Components and simplify page

--- a/web/src/component/Middle/MiddleStyles.css
+++ b/web/src/component/Middle/MiddleStyles.css
@@ -18,7 +18,7 @@
 .secContainer .grid {
     padding: 3rem;
     border-radius: 25px;
-    background-color: #ecc797;
+    background-color: #d3e5f0;
     justify-content: center;
     margin: auto;
     gap: 2rem;
