--- a/web/src/component/About/AboutStyles.css
+++ b/web/src/component/About/AboutStyles.css
@@ -1,6 +1,10 @@
 .about-container {
     margin: 4rem 6rem;
     text-align: start;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .about-container h1 {
@@ -9,6 +13,7 @@
 
 .about-container p {
     padding-bottom: 2rem;
+    max-width: 50vw;
 }
 
 @media screen and (max-width: 850px) {
