--- a/web/src/component/Destination/DestinationStyles.css
+++ b/web/src/component/Destination/DestinationStyles.css
@@ -66,7 +66,7 @@
 
     .first-des-reverse {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column;
         align-items: center;
         justify-content: space-between;
         margin-top: 4.5rem;
