--- a/web/src/component/Footer/FooterStyles.css
+++ b/web/src/component/Footer/FooterStyles.css
@@ -1,29 +1,12 @@
 .footer {
-    padding: 4rem 6rem;
+    padding: 2rem 2rem;
     background: #000;
     color: #fff;
 }
 
-.top {
-    display: flex;
-    align-items: center;
-    text-align: start;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.top i {
-    color: #fff;
-    font-size: 2rem;
-    margin-left: 1rem;
-}
-
-.top i:hover {
-    color: #01959a;
-}
 
 .bottom {
-    padding-top: 2rem;
+    padding-top: 1rem;
     text-align: start;
     display: flex;
     justify-content: space-between;
@@ -37,7 +20,7 @@
 
 .bottom h4 {
     font-size: 1.3rem;
-    padding: 1rem 0 0.8rem 0;
+    padding: 0 0 0.8rem 0;
 }
 
 .bottom a {
